--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,31 +27,31 @@ jobs:
   #         go get -u golang.org/x/lint/golint 
   #         make lint
           
-  test:
-    name: Test
-    runs-on: ubuntu-latest
-    steps:
-      - name: Set up Go
-        uses: actions/setup-go@v1
-        with:
-          go-version: 1.13
+  # test:
+  #   name: Test
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Set up Go
+  #       uses: actions/setup-go@v1
+  #       with:
+  #         go-version: 1.13
 
-      - name: Check out code
-        uses: actions/checkout@v1
+  #     - name: Check out code
+  #       uses: actions/checkout@v1
 
-      - name: Run Unit tests.
-        run: make test-coverage
+  #     - name: Run Unit tests.
+  #       run: make test-coverage
       
-      - name: Upload Coverage report to CodeCov
-        uses: codecov/codecov-action@v1.0.0
-        with:
-          token: ${{secrets.CODECOV_TOKEN}}
-          file: ./coverage.txt
+  #     - name: Upload Coverage report to CodeCov
+  #       uses: codecov/codecov-action@v1.0.0
+  #       with:
+  #         token: ${{secrets.CODECOV_TOKEN}}
+  #         file: ./coverage.txt
 
   build:
     name: Build
     runs-on: ubuntu-latest 
-    needs: [test]
+    # needs: [test]
     steps:
       - name: Set up Go
         uses: actions/setup-go@v1
